--- a/scss/2-layout/_header.scss
+++ b/scss/2-layout/_header.scss
@@ -18,6 +18,7 @@ header {
     left: 0;
     height: 80px;
     width: 160px;
+    z-index: 20;
 
     .logo-mobile {
         display: block;
